--- a/package.json
+++ b/package.json
@@ -26,5 +26,5 @@
     "type": "git",
     "url": "FarMarkt"
   },
-  "description": ""
+  "description": "Hello! This was my first major project, perhaps this is why it is still in progress."
 }
