--- a/package.json
+++ b/package.json
@@ -11,17 +11,18 @@
   "author": "AV",
   "license": "ISC",
   "dependencies": {
-    "ejs": "^3.1.6",
+    "dotenv": "^16.0.3",
+    "ejs": "^3.1.8",
     "ejs-mate": "^3.0.0",
     "express": "^4.17.3",
     "infinite-scroll": "^4.0.1",
+    "luxon": "^3.0.4",
     "mapbox-gl": "^2.7.0",
     "mongodb": "^4.4.0",
     "mongoose": "^6.2.3",
     "node-sass": "^6.0.1",
     "sass": "^1.49.8"
   },
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "FarMarkt"
